03-orquestacion/Exercise-3/lc-todo/deploy-lc-todo-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-lc-todo-api
  labels:
    app: deploy-lc-todo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lc-todo-api
  template:
    metadata:
      name: lc-todo-api
      labels:
        app: lc-todo-api
    spec:
      containers:
        - name: lc-todo-api
          image: lemoncodersbc/lc-todo-api:v5-2024
          ports:
            - containerPort: 3000
