03-orquestacion/Exercise-3/lc-todo/svc-lc-todo-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-lc-todo-api
spec:
  selector:
    app: lc-todo-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
