03-orquestacion/Exercise-3/lc-todo/svc-lc-todo-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-lc-todo-front
spec:
  selector:
    app: lc-todo-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
